<resources>
    <string name="app_name">LVA</string>
    <string name="something_when_wrong">Có lỗi xảy ra, xin vui lòng thử lại sau.</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="facebook_app_id">261992641164850</string>
    <string name="fb_login_protocol_scheme">fb261992641164850</string>

    <string name="title_shop">Shop</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_knowledge">Những điều bạn nên biết</string>
    <string name="order">Đặt hàng</string>
    <string name="history">Lịch sử</string>
    <string name="fanpage">FanPage</string>
    <string name="login">Đăng nhập</string>
    <string name="news">Tin tức</string>
    <string name="account">Tài khoản</string>
    <string name="title_tutorial">Hướng dẫn sử dụng</string>
    <string name="title_news"><![CDATA[Tin tức & Khuyến mãi]]></string>
    <string name="order_now">Order ngay</string>
    <string name="attention">Thông báo</string>
    <string name="network_error">Lỗi kết nối Internet!! Quý khách vui lòng kiểm tra kết nối Wifi/3G/4G/ GPRS và thử lại.</string>
    <string name="skip">Bỏ qua</string>
    <string name="retry">Thử lại</string>
    <string name="loading">Loading...</string>
    <string name="hello">Chào bạn</string>
    <string name="text_input_number_to_continous">Nhập số điện thoại để tiếp tục</string>
    <string name="phone">Số điện thoại</string>
    <string name="continous">Tiếp tục</string>
    <string name="or">Hoặc</string>
    <string name="ok">Đồng ý</string>
    <string name="do_you_want_quit">Bạn chắc chắn muốn thoát ???</string>
    <string name="input_otp_from_sms">Nhập mã xác thực được gửi tới số điện thoại của bạn.</string>
    <string name="resend_otp">Gửi lại</string>
    <string name="logout">Đăng xuất</string>
    <string name="account_info">Thông tin tài khoản</string>
    <string name="history_ship">Lịch sử giao hàng</string>
    <string name="policy">Chính sách và bảo mật</string>
    <string name="logout_text">Bạn chắc chắn muốn đăng xuất ?</string>
    <string name="change">Thay đổi</string>
    <string name="ship_to">Giao hàng đến</string>
    <string name="none">Chưa có</string>
    <string name="address_ship">Địa chỉ mua hàng</string>
    <string name="tinh">Tỉnh/Thành phố</string>
    <string name="input_tinh">Điền Tỉnh/Thành phố</string>
    <string name="huyen">Quận/Huyện</string>
    <string name="input_huyen">Điền Quận/Huyện</string>
    <string name="input_xa">Điền Phường/Xã</string>
    <string name="xa">Phường/Xã</string>
    <string name="address_specific">Địa chỉ cụ thể</string>
    <string name="address_specific_text">Số nhà, tên tòa nhà, tên đường, tên khu vực</string>
    <string name="input_address_specific">Nhập địa chỉ cụ thể</string>
    <string name="update_address">Cập nhật địa chỉ</string>
    <string name="please_choose_city">Vui lòng chọn Tỉnh/Thành phố</string>
    <string name="please_choose_district">Vui lòng nhập Quận/Huyện</string>
    <string name="please_input_infomation">Vui lòng điền đầy đủ thông tin</string>
    <string name="message_dialog_update_address">Bạn có chắc chắn muốn sử dụng địa chỉ:\n %s</string>
    <string name="feature">Công dụng</string>
    <string name="loadmore">xem thêm</string>
    <string name="help">Hỗ trợ</string>
    <string name="user_info">Thông tin cá nhân</string>
    <string name="input_name">Họ và tên</string>
    <string name="input_phone">Số điện thoại</string>
    <string name="input_birthday">Ngày sinh</string>
    <string name="point">Điểm tích lũy: %s</string>
    <string name="update">Cập nhật</string>
    <string name="select_picture">Chọn ảnh</string>
    <string name="you_need_login">Bạn cần đăng nhập để thực hiện chức năng này</string>
    <string name="info_ship">Thông tin nhận hàng</string>
    <string name="address">Địa chỉ</string>
    <string name="info_product">Thông tin đơn hàng</string>
    <string name="sum">Tổng cộng: </string>
    <string name="quality">Số lượng:</string>
    <string name="order_success">Đặt hàng thành công</string>
    <string name="order_success_text">Đơn hàng của bạn đã được đặt thành công, chúng tôi sẽ liên lạc với bạn trong thời gian sớm nhất!!</string>
    <string name="total">Thành tiền:</string>
    <string name="info_pay">Thông tin thanh toán</string>
    <string name="type_pay">Hình thức thanh toán: %s</string>
    <string name="number_product">Số lượng sản phẩm: %s</string>
    <string name="history_order">Lịch sử đặt hàng</string>
    <string name="discount">Giảm giá: %s</string>
    <string name="input_phone_to_continues">Điền số điện thoại để tiếp tục</string>
    <string name="update_address_done">Cập nhật địa chỉ thành công</string>
    <string name="point_save">Điểm tích lũy: %s</string>
</resources>
