<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_login_phone"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="@dimen/s20" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d5"
            android:text="@string/text_input_number_to_continous"
            android:textColor="@color/color_text"
            android:textSize="@dimen/s16" />


        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d50"
            android:layout_marginTop="@dimen/d16"
            android:textSize="@dimen/s16"
            android:background="@drawable/bg_edt_phone"
            android:hint="@string/phone"
            android:padding="@dimen/d10"
            android:maxLength="16"
            android:maxLines="1"
            android:inputType="number"
            android:imeOptions="actionDone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/d50"
            android:layout_marginTop="@dimen/d16"
            android:background="@drawable/bg_btn_login"
            android:text="@string/continous"
            android:textSize="@dimen/s16"
            android:gravity="center"
            android:id="@+id/btn_next"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:gravity="center"
        android:layout_marginBottom="@dimen/d16"
        app:layout_constraintBottom_toTopOf="@+id/btn_facebook" />
    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/d16"
        android:paddingBottom="@dimen/d16"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>